# fcitx-en

./: AUTHORS  CMakeLists.txt  INSTALL  README  config.h.in
cmake/: .goutputstream-WWWQ7V  FindHunspell.cmake
data/: CMakeLists.txt  en.conf.in  en_dic.txt  fcitx-en.conf.in  fcitx-en.desc
po/: CMakeLists.txt  POTFILES.in.in  fcitx-en.pot  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  config.c  eim.c  eim.h  en.conf.in  fcitx-en.conf.in  fcitx-en.desc
