install(FILES en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/imicon/)
install(FILES en.png DESTINATION share/icons/hicolor/48x48/apps/ RENAME fcitx-en.png)
install(FILES default/en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/default)
install(FILES dark/en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/dark)
install(FILES classic/en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/classic)
install(FILES en_dic.txt DESTINATION share/fcitx/data)

