install(FILES fcitx-en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/imicon/)
install(FILES fcitx-en.png DESTINATION share/icons/hicolor/48x48/apps/)
install(FILES default/fcitx-en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/default)
install(FILES dark/fcitx-en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/dark)
install(FILES classic/fcitx-en.png DESTINATION ${FCITX4_PREFIX}/share/fcitx/skin/classic)
install(FILES en_dic.txt DESTINATION share/fcitx/data)

